fixed scrolling issue in list view, set drag-target z-index to -1

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -25,3 +25,7 @@ body, html {
     height: calc(100% - 64px) !important;
   }
 }
+
+.drag-target {
+  z-index: -1 !important;
+}
